# AnimeGanAndroid

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/infil00p/animegangallerydemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AnimeGan.cpp  AnimeGan.h  AnimeGanPyTorch.cpp  AnimeGanPyTorch.h  CMakeLists.txt  MobileCallGuard.h  native-lib.cpp
app/src/main/java/org/infil00p/animegangallerydemo/: AssetHandler.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/infil00p/animegangallerydemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
jupyter/: AnimeGAN Convert.ipynb
